content/vault/v1.9.x/content/docs/commands/namespace.mdx
---
layout: docs
page_title: namespace - Command
description: The "namespace" command groups subcommands for interacting with namespaces.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-07-02T11:54:12-05:00
last_modified: 2025-07-02T11:54:12-05:00
# END AUTO GENERATED METADATA
---

# namespace

The `namespace` command groups subcommands for interacting with namespaces.

## Examples

List all namespaces:

```shell-session
$ vault namespace list
```

Create a namespace at the path `ns1/`:

```shell-session
$ vault namespace create ns1/
```

Delete the namespace at path `ns1/`:

```shell-session
$ vault namespace delete ns1/
```

Lookup the namespace information at path `ns1/`:

```shell-session
$ vault namespace lookup ns1/
```

Lock the API for the current namespace:

```shell-session
$ vault namespace lock
```

Lock the API for a descendant namespace at path `current/namespace/ns1/`:

```shell-session
$ vault namespace lock ns1/
```

Unlock the API for the current namespace:

```shell-session
$ vault namespace unlock -unlock-key <unlock key>
```

Unlock the API for a descendant namespace at path `current/namespacens1/`:

```shell-session
$ vault namespace unlock -unlock-key <unlock key> ns1/
```

## Usage

```text
Usage: vault namespace <subcommand> [options] [args]

  This command groups subcommands for interacting with Vault namespaces.
  These set of subcommands operate on the context of the namespace that the
  current logged in token belongs to.

Subcommands:
    create   Create a new namespace
    delete   Delete an existing namespace
    list     List child namespaces
    lookup   Look up an existing namespace
    lock     Lock the API for a namespace
    unlock   Unlock the API for a namespace
```

For more information, examples, and usage about a subcommand, click on the name
of the subcommand in the sidebar.
